Tests implemented, basic security provided