@@ -2,11 +2,16 @@ package pl.zajavka.api.controller;
 
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
+import org.springframework.validation.BindException;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.servlet.ModelAndView;
+import pl.zajavka.domain.exception.NotFoundException;
 import pl.zajavka.domain.exception.ProcessingException;
+
+import java.util.Optional;
 
 @Slf4j
 @ControllerAdvice
@@ -14,7 +19,16 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(Exception.class)
     public ModelAndView handleException(Exception ex) {
-        String message = "Other exception occurred: [%s]".formatted(ex.getMessage());
+        String message = String.format("Other exception occurred: [%s]", ex.getMessage());
+        log.error(message, ex);
+        ModelAndView modelAndView = new ModelAndView("error");
+        modelAndView.addObject("errorMessage", message);
+        return modelAndView;
+    }
+
+    @ExceptionHandler(NotFoundException.class)
+    public ModelAndView handleException(NotFoundException ex) {
+        String message = String.format("Could not find a resource: [%s]", ex.getMessage());
         log.error(message, ex);
         ModelAndView modelAndView = new ModelAndView("error");
         modelAndView.addObject("errorMessage", message);
@@ -24,7 +38,19 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(ProcessingException.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ModelAndView handleException(ProcessingException ex) {
-        String message = "Processing exception occurred: [%s]".formatted(ex.getMessage());
+        String message = String.format("Processing exception occurred: [%s]", ex.getMessage());
+        log.error(message, ex);
+        ModelAndView modelAndView = new ModelAndView("error");
+        modelAndView.addObject("errorMessage", message);
+        return modelAndView;
+    }
+
+    @ExceptionHandler(BindException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ModelAndView handleException(BindException ex) {
+        String message = String.format("Bad request for field: [%s], wrong value: [%s]",
+                Optional.ofNullable(ex.getFieldError()).map(FieldError::getField).orElse(null),
+                Optional.ofNullable(ex.getFieldError()).map(FieldError::getRejectedValue).orElse(null));
         log.error(message, ex);
         ModelAndView modelAndView = new ModelAndView("error");
         modelAndView.addObject("errorMessage", message);
